--- a/repos/ll/gamesvr-csgo-download/Dockerfile.linux
+++ b/repos/ll/gamesvr-csgo-download/Dockerfile.linux
@@ -2,12 +2,13 @@ FROM ll/gamesvr-csgo
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-download" 
+ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-download"
 
 COPY ./files/ /gamesvr/csgo/
 
 RUN `##Set up container enviorment##` && \
-    useradd -M --home /gamesvr/csgo/ gamesvr-csgo-download -c "Docker container user for ll/gamesvr-csgo-download"
+    useradd --home /gamesvr/csgo/ --create-home gamesvr-csgo-download
+
 
 USER gamesvr-csgo-download
 
