--- a/repos/ll/gamesvr-csgo-freeplay/linux/Dockerfile
+++ b/repos/ll/gamesvr-csgo-freeplay/linux/Dockerfile
@@ -7,7 +7,7 @@ ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-freeplay"
 COPY ./files/ /gamesvr/csgo/
 
 RUN `##Set up container enviorment##` && \
-    useradd -M --home /gamesvr/csgo/ gamesvr-csgo-freeplay -c "Docker container user for ll/gamesvr-csgo-freeplay"
+    useradd --home /gamesvr/csgo/ --create-home gamesvr-csgo-freeplay
 
 USER gamesvr-csgo-freeplay
 
