--- a/repos/ll/gamesvr-hl2dm-freeplay/linux/Dockerfile
+++ b/repos/ll/gamesvr-hl2dm-freeplay/linux/Dockerfile
@@ -7,7 +7,8 @@ ENV HOME="/gamesvr/hl2dm/" SERVER_NAME="ll/gamesvr-hl2dm-freeplay"
 COPY ./files/ /gamesvr/hl2dm/
 
 RUN `##Set up container enviorment##` && \
-    useradd -M --home /gamesvr/hl2dm/ gamesvr-hl2dm-freeplay -c "Docker container user for ll/gamesvr-hl2dm-freeplay"
+    useradd --home /gamesvr/hl2dm/ --create-home gamesvr-hl2dm-freeplay
+
 
 USER gamesvr-hl2dm-freeplay
 
