--- a/repos/ll/gamesvr-tf2-blindfrag/linux/Dockerfile
+++ b/repos/ll/gamesvr-tf2-blindfrag/linux/Dockerfile
@@ -2,12 +2,13 @@ FROM ll/gamesvr-tf2
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-blindfrag" 
+ENV HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-blindfrag"
 
 COPY ./files/ /gamesvr/tf2/
 
 RUN `##Set up container enviorment##` && \
-    useradd -M --home /gamesvr/tf2/ gamesvr-tf2-blindfrag -c "Docker container user for ll/gamesvr-tf2-blindfrag"
+    useradd --home /gamesvr/tf2/ --create-home gamesvr-tf2-blindfrag
+
 
 USER gamesvr-tf2-blindfrag
 
