--- a/repos/ll/gamesvr-blackmesa-freeplay/linux/Dockerfile
+++ b/repos/ll/gamesvr-blackmesa-freeplay/linux/Dockerfile
@@ -7,7 +7,8 @@ ENV HOME="/gamesvr/blackmesa/" SERVER_NAME="ll/gamesvr-blackmesa-freeplay"
 COPY ./files/ /gamesvr/blackmesa/
 
 RUN `##Set up container enviorment##` && \
-    useradd -M --home /gamesvr/blackmesa/ gamesvr-blackmesa-freeplay -c "Docker container user for ll/gamesvr-blackmesa-freeplay"
+    useradd --home /gamesvr/blackmesa/ --create-home gamesvr-blackmesa-freeplay
+
 
 USER gamesvr-blackmesa-freeplay
 
