--- a/repos/ll/gamesvr-csgo-tourney/linux/Dockerfile
+++ b/repos/ll/gamesvr-csgo-tourney/linux/Dockerfile
@@ -2,12 +2,12 @@ FROM ll/gamesvr-csgo
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-tourney" 
+ENV HOME="/gamesvr/csgo/" SERVER_NAME="ll/gamesvr-csgo-tourney"
 
 COPY ./files/ /gamesvr/csgo/
 
 RUN `##Set up container enviorment##` && \
-    useradd -M --home /gamesvr/csgo/ gamesvr-csgo-tourney -c "Docker container user for ll/gamesvr-csgo-tourney"
+    useradd --home /gamesvr/csgo/ --create-home gamesvr-csgo-tourney
 
 USER gamesvr-csgo-tourney
 
