--- a/repos/ll/gamesvr-tf2-download/Dockerfile.linux
+++ b/repos/ll/gamesvr-tf2-download/Dockerfile.linux
@@ -2,12 +2,12 @@ FROM ll/gamesvr-tf2
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-download" 
+ENV HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-download"
 
 COPY ./files/ /gamesvr/tf2/
 
 RUN `##Set up container enviorment##` && \
-    useradd -M --home /gamesvr/tf2/ gamesvr-tf2-download -c "Docker container user for ll/gamesvr-tf2-download"
+    useradd --home /gamesvr/tf2/ --create-home  gamesvr-tf2-download
 
 USER gamesvr-tf2-download
 
