--- a/repos/ll/gamesvr-tf2-freeplay/linux/Dockerfile
+++ b/repos/ll/gamesvr-tf2-freeplay/linux/Dockerfile
@@ -2,12 +2,12 @@ FROM ll/gamesvr-tf2
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
-ENV HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-freeplay" 
+ENV HOME="/gamesvr/tf2/" SERVER_NAME="ll/gamesvr-tf2-freeplay"
 
 COPY ./files/ /gamesvr/tf2/
 
 RUN `##Set up container enviorment##` && \
-    useradd -M --home /gamesvr/tf2/ gamesvr-tf2-freeplay -c "Docker container user for ll/gamesvr-tf2-freeplay"
+    useradd --home /gamesvr/tf2/ --create-home gamesvr-tf2-freeplay
 
 USER gamesvr-tf2-freeplay
 
